# dpi-detector

./: .dockerignore  Cargo.toml  Dockerfile  README.md  config.py  docker-compose.yml  domains.txt  dpi_detector.py  tcp16.json
.github/workflows/: docker-main.yml  docker-rust.yml  docker.yml  release.yml
cli/: console.py  runners.py  ui.py
core/: dns_scanner.py  tcp16_scanner.py  tls_scanner.py
metrics/: prometheus.py
src/: config.rs  loader.rs  main.rs  metrics.rs  scanners.rs
utils/: error_classifier.py  files.py  network.py
